# emesch

./: .gitignore  .travis.yml  CPattern.hs  Compiling.hs  Compiling2.hs  Emesch.cabal  Emesch.hs  Emeschc.hs  Evaling.hs  Internal.hs  Macro.hs  Main.hs  NextCompiling.hs  Optim.hs  Opts.hs  Parsing.hs  Parsing2.hs  README.md  Register.hs  emeschlib.h  entry.c  runtime.h
lib/: emeschlib.c  emeschlib.h  gc.c  gc.h
src/: AST.hs  Backend.hs  Emeschc.hs  Frontend.hs  IRep.hs  Macro.hs  Parsing2.hs  Quotient.hs  ToC.hs  backend.hs  compiler.hs  emeschlib.c  emeschlib.h  frontend.hs  gc.c  gc.h  irep.hs
