name:                Emesch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Emesch#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Emeschc
  hs-source-dirs:      src
  main-is:             Emeschc.hs
  default-language:    Haskell2010
  other-modules:
      AST
      Backend
      Compiler
      Frontend
      IRep
      Macro
      Parsing2
      ToC
  build-depends:       
      base >= 4.7 && < 5
